# tzupdate

./: .pylintrc  .travis.yml  AUTHORS  Cargo.toml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.py  tox.ini  tzupdate  tzupdate.py
.github/workflows/: ci.yml
contrib/: 09-timezone  README.rst
src/: file.rs  http.rs  main.rs
tests/: _test_utils.py  e2e_tests.py  requirements.txt  test_e2e.py  test_unit.py  unit_tests.py
