[package]
name = "tzupdate"
version = "3.1.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Set the system timezone based on IP geolocation."
repository = "https://github.com/cdown/tzupdate"
readme = "README.md"
keywords = ["timezone", "localtime", "geolocation"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.64.0"

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.10", default-features = false, features = ["std", "derive", "help"] }
env_logger = { version = "0.10.1", features = ["humantime"], default-features = false }
log = "0.4.20"
serde_json = { version = "1.0.108", default-features = false }
tempfile = "3.8.1"
ureq = { version = "2.9.1", default-features = false, features = ["json", "tls"] }
