[package]
name = "tzupdate"
version = "3.1.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Set the system timezone based on IP geolocation."
repository = "https://github.com/cdown/tzupdate"
readme = "README.md"
keywords = ["timezone", "localtime", "geolocation"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.64.0"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.3.24", default-features = false, features = ["std", "derive", "help"] }
env_logger = { version = "0.10.2", features = ["humantime"], default-features = false }
log = "0.4.22"
serde_json = { version = "1.0.132", default-features = false }
tempfile = "3.13.0"
ureq = { version = "2.10.1", default-features = false, features = ["json", "tls"] }
