[package]
name = "tzupdate"
version = "3.1.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Set the system timezone based on IP geolocation."
repository = "https://github.com/cdown/tzupdate"
readme = "README.md"
keywords = ["timezone", "localtime", "geolocation"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.74"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", default-features = false, features = ["std", "derive", "help"] }
env_logger = { version = "0.11.8", features = ["humantime"], default-features = false }
log = "0.4.27"
serde_json = { version = "1.0.143", default-features = false }
tempfile = "3.21.0"
ureq = { version = "3.1.0", default-features = false, features = ["json", "rustls"] }
